experiment_output/error_log/nondex-wildfly-wildfly-gradle-tools.log
POM relocation to an other version number is not fully supported in Gradle : xml-apis:xml-apis:2.0.2 relocated to xml-apis:xml-apis:1.0.b2.
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task152/wd/NonDex-plugin-test/github.com/wildfly/wildfly-gradle-tools/src/main/java/org/wildfly/build/gradle/provisioning/DependencyAdaptor.java:10: error: DependencyAdaptor is not abstract and does not override abstract method getModuleIdentifier() in ModuleComponentIdentifier
public class DependencyAdaptor implements ModuleComponentIdentifier {
       ^
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 21s
